# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  dto.AdResponse:
+  dto.AdBaseResponse:
     properties:
       author_email:
         type: string
@@ -51,6 +51,8 @@ definitions:
         type: integer
       image_url:
         type: string
+      is_mine:
+        type: boolean
       price:
         type: integer
       title:
@@ -67,7 +69,7 @@ definitions:
     properties:
       ads:
         items:
-          $ref: '#/definitions/dto.AdResponse'
+          $ref: '#/definitions/dto.AdBaseResponse'
         type: array
       count_pages:
         type: integer
@@ -137,7 +139,7 @@ paths:
       - application/json
       description: Создаёт объявление от имени текущего пользователя
       parameters:
-      - description: <access_token>
+      - description: JWT Access token
         in: header
         name: Authorization
         required: true
@@ -167,8 +169,6 @@ paths:
           description: Внутренняя ошибка
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
-      security:
-      - BearerToken: []
       summary: Создать новое объявление
       tags:
       - ads
@@ -178,8 +178,7 @@ paths:
       - application/json
       description: Возвращает постраничный, сортируемый и фильтруемый список объявлений
       parameters:
-      - description: Bearer <access_token> — при передаче вернёт userId и отметит
-          isAuthenticated
+      - description: JWT Access token
         in: header
         name: Authorization
         type: string
@@ -231,8 +230,6 @@ paths:
           description: Внутренняя ошибка сервера
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
-      security:
-      - BearerToken: []
       summary: Получить список объявлений
       tags:
       - ads
