# internal/auth_signup/transport/rest/routers.go
@@ -1,19 +1,15 @@
 package rest
 
 import (
-	"context"
 	"github.com/1URose/marketplace/internal/auth_signup/transport/rest/routers"
-	"github.com/1URose/marketplace/internal/common/db"
-	"github.com/1URose/marketplace/internal/common/jwt"
-	"github.com/gin-gonic/gin"
-
+	"github.com/1URose/marketplace/internal/common/app"
 	"log"
 )
 
-func RegisterRoutes(ctx context.Context, engine *gin.Engine, connections *db.Connections, jwtMgr *jwt.Manager) {
+func RegisterRoutes(deps *app.Deps) {
 	log.Println("[rest:auth_signup] registering auth routers")
 
-	authRouter := routers.NewAuthRouter(ctx, engine, connections, jwtMgr)
+	authRouter := routers.NewAuthRouter(deps)
 	authRouter.RegisterRoutes()
 
 	log.Println("[rest:auth_signup] auth routers registered successfully")
